# Carrot

./: CMakeLists.txt  FEATURES.md  LICENSE  NOTICE  README.md  meta.c++  meta.cpp.in
components/carrot/: CMakeLists.txt  README.md
components/carrot/src/linux/: main.cpp
components/nekko/: README.md
components/usagi/: CMakeLists.txt  README.md
components/usagi/head/: asset_store.h  cli.h  environment.h  fs.h  gui.h  meta.h  parser.h  token.h  value.h
components/usagi/platform/linux/: platform_module.h
components/usagi/src/linux/: cli.cpp  coroutine.cpp  fs.cpp
components/usagi/src/multiplatform/: interpreter.cpp  lexer.cpp
components/vita/: CMakeLists.txt  README.md  app.nin
contrib/: adding_a_new_platform.md  adding_new_core_functions.md  adding_new_platform_functions.md  adding_new_tokens.md
cpp_api_mod/hello world/: CMakeLists.txt  carrot_module.h
cpp_api_mod/sdl/: CMakeLists.txt  mod.cpp
cpp_api_mod/vita hello/: CMakeLists.txt  mod.cpp
docs/: main.md
examples/: README.md
examples/cpp/net/: CMakeLists.txt
examples/cpp/vec2/: CMakeLists.txt  mod.cpp
examples/cpp/vita hello/: mod.yml
examples/nin/: app.nin  entropy.nin  ffi_wrapper.nin  inheritance.nin
head/: ast.h  builtin.h  carrot_module.h  coroutine.h  environment.h  fdio.h  interpreter.h  lexer.h  networking.h  parser.h  platform.h  token.h  value.h
modules/cpp/entropy/: CMakeLists.txt  LICENSE  man.json  manifest.json
modules/cpp_ffi/entropy/: CMakeLists.txt  carrot_module.h  entropy.c  entropy.h  mod.cpp
modules/cpp_ffi/hello world/: mod.cpp
modules/cpp_ffi/net/: carrot_module.h  mod.cpp
modules/nin/: app.nin  bootstrap.nin  example.nin  math.nin  showcase.nin
nin/: app.nin  main.nin  math.nin
platform/linux/: platform_core_builtins.h  platform_registery.cpp
src/cli/: main.cpp
src/linux/: asset_store.cpp  builtin.cpp  coroutine.cpp  main.cpp  networking.cpp
src/multiplatform/: interpreter.cpp  lexer.cpp  parser.cpp
src/vita/: builtin.cpp  main.cpp
